<resources>
	<string name="app_name">Clock Zmanim Widget</string>
	<string name="widget_name">Clock Zmanim</string>
	<string name="parashat_hashavua">פרשת השבוע</string>
	<string name="date_format">HH:mm</string>
	<string name="l_cfg_clock_element">Clock element</string>
	<string name="l_cfg_visible">Visible</string>
	<string name="l_cfg_color">Color</string>
	<string name="l_cfg_transparency">Transparency</string>
	<string name="l_cfg_hue">Hue</string>
	<string name="l_cfg_saturation">Saturation</string>
	<string name="l_cfg_brightness">Brightness</string>
	<string name="l_cfg_fontsize">Font Size</string>
	<string name="l_cfg_elements">Time Markers Size, Transparency and Color</string>
	<string name="l_cfg_clockmode">Set Clock Mode</string>
	<string name="l_cfg_clockmodecat">Clock Mode</string>
	<string name="l_cfg_font">Font</string>
	<string name="add_widget">Add Widget</string>
	<string name="bAlotTzet72_t">Use Alot Hashachar/Tzet Hakokhavim 72 min.</string>
	<string name="pcat_sunrise_t">Sunrise and Sunset</string>
	<string name="pcat_sunrise_s">Format time marks</string>
	<string name="pCurrLocation">Current Location</string>
	<string name="pSize">Size</string>
	<string name="pColor">Color</string>
	<string name="pPlace">Placement</string>
	<string name="pTimeFormat">Time format</string>
	<string name="ps_sumClockLayout">Layout preferences, color and size</string>
	<string name="pc_tTime">Main Time</string>
	<string name="psClockLayout">Layout preferences</string>
	<string name="pc_tHours">Time Hours</string>
	<string name="psZmanimEngine">Zmanim Engine</string>
	<string name="ps_sumZmanimEngine">Zmanim Settings</string>
	<string name="pShowZmanim">Show Zmanim</string>
	<string name="pZmanimMode">Calculation Method</string>
	<string name="p_sumZmanimMode">The exact moment for the beginning of the day</string>
	<string name="pPtrHeight">Clock Pointer Height</string>
	<string name="p_wClockFrame">Clock Frame Width</string>
	<string name="pbLangHebrew">Display in Hebrew</string>
	<string name="pc_HebDate">Hebrew Date</string>
	<string name="pShowHebDate">Show Hebrew Date</string>
	<string name="pc_parashat">Parashat Hashavua and Yom Tov</string>
	<string name="pcsParashat">Parashat Hashavua and Yom Tov settings</string>
	<string name="pShowParashat">Show Parashat Hashavua and Yom Tov</string>
	<string name="pc_72Names">72 Names</string>
	<string name="pShow72Names">Show 72 Names</string>
	<string name="pReset">Reset to default</string>
	<string name="pRemoveAll">Remove All</string>
	<string name="pBClockElapsedTime">Progress shows Elapsed Time / Remain Time</string>
	<string name="psumBClockElapsedTime">Progress shows Elapsed Time (checked) or Remain Time (unckecked)</string>
	<string name="pbWhiteOnBlack">White Letters on Black Background</string>
	<string name="sWeek">week</string>
	<string name="omerSep">of</string>
    <string name="colormainTheme">Main Theme</string>
	<string name="colorTheme">Color theme</string>
	<string name="colorThemeSum">Zmanim Clock color theme</string>
	<string name="pshowWeather">Show Weather Forecast Frame</string>
	<string name="pszWeatherFrame">Frame Width</string>
    <string name="title_activity_zc">Zmanim Clock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

	<string name="mispar_hechrachi">מ׳ החרחי</string>
	<string name="pCurrWeather">Update Weather</string>
</resources>
